k8s/schedule-meeting/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schedule-meeting
spec:
  selector:
    app: schedule-meeting
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
